--- a/API/server/package.json
+++ b/API/server/package.json
@@ -4,7 +4,7 @@
   "description": "APIPA",
   "main": "srv.js",
   "scripts": {
-    "dev": "nodemon srv.js --ignore products.json",
+    "dev": "nodemon srv.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/YanisGitHubCours/e-Democracy#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mysql": "^2.18.1"
   }
 }
